--- a/.gitignore
+++ b/.gitignore
@@ -1,101 +1,49 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
+*.bak
+*.pyc
+*.txt
+*.csv
 .coverage
-.coverage.*
 .cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+*.swp
+*.tsv
+htmlcov
 *.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
+*.class
+json-loader/.gradle
+json-loader/build
+bin/
+!telemetry/bin
+lib/
+lib64
+*.egg-info*
+include/
+!requirements.txt
+!all_requirements.txt
+tags
+man
+pylint.out
+cover/
+docs/plugin_catalog/*.rst
+docs/components.rst
+build/
+.idea*
+dist/
+uploader.json
+file_plugin_mapping.json
+junk/
+pip-selfcheck.json
+.agignore
+.project
+.pydevproject
+integration_tests/
+demo-archives/
+archives/
+.engine_logs/
+*.zip
+*.gz
+.ipynb_checkpoints/
+sosreport*
+output/
+share/
+.Python
 .python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# dotenv
-.env
-
-# virtualenv
-.venv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
